tests/algorithms/x/C/data_structures/stacks/stack.c
// Generated by Mochi 0.10.32 on 2025-08-07 20:18 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>


size_t _slice_int_len;
static char* str_int(long long v) {
    char buf[32];
    snprintf(buf, sizeof(buf), "%lld", v);
    return strdup(buf);
}

static char* str_list_int(const long long *arr, size_t len) {
    size_t cap = len * 32 + 2;
    char *buf = malloc(cap);
    size_t pos = 0;
    buf[pos++] = '[';
    for (size_t i = 0; i < len; i++) {
        char tmp[32];
        snprintf(tmp, sizeof(tmp), "%d", arr[i]);
        size_t n = strlen(tmp);
        if (pos + n + 2 >= cap) { cap = cap * 2 + n + 2; buf = realloc(buf, cap); }
        memcpy(buf + pos, tmp, n);
        pos += n;
        if (i + 1 < len) buf[pos++] = ' ';
    }
    buf[pos++] = ']';
    buf[pos] = 0;
    return buf;
}

static long long* list_append_int(long long *arr, size_t *len, long long val) {
    arr = realloc(arr, (*len + 1) * sizeof(long long));
    arr[*len] = val;
    (*len)++;
    return arr;
}

#include <time.h>
#include <stdlib.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static void panic(const char *msg) {
    fputs(msg, stderr);
    fputc('\n', stderr);
    exit(1);
}

static long long* _slice_int(const long long *arr, size_t len, int start, int end, size_t *out_len) {
    if (start < 0) start = 0;
    if ((size_t)end > len) end = len;
    if (start > end) start = end;
    size_t n = end - start;
    long long *res = NULL;
    if (n) {
        res = malloc(n * sizeof(long long));
        memcpy(res, arr + start, n * sizeof(long long));
    }
    *out_len = n;
    _slice_int_len = n;
    return res;
}

typedef struct Stack Stack;

struct Stack {
    long long *items;
    size_t items_len;
    long long limit;
};

Stack make_stack(long long limit);
long long is_empty(Stack s);
long long size(Stack s);
long long is_full(Stack s);
void push(Stack* s, long long item);
long long pop(Stack* s);
long long peek(Stack s);
long long contains(Stack s, long long item);
const char* stack_repr(Stack s);
void user_main();
int main(void);

Stack make_stack(long long limit) {
    return (Stack){.items = NULL, .items_len = 0, .limit = limit};
}

long long is_empty(Stack s) {
    return s.items_len == 0LL;
}

long long size(Stack s) {
    return s.items_len;
}

long long is_full(Stack s) {
    return s.items_len >= s.limit;
}

void push(Stack* s, long long item) {
    if (is_full(s)) {
        panic("stack overflow");
    }
    s.items = list_append_int(s.items, &s.items_len, item);
}

long long pop(Stack* s) {
    if (is_empty(s)) {
        panic("stack underflow");
    }
    long long n = len(s.items);
    long long val = s.items[(int)(n - 1LL)];
    s.items = _slice_int(s.items, s.items_len, 0LL, n - 1LL, &(_slice_int_len));
    s.items_len = _slice_int_len;
    return val;
}

long long peek(Stack s) {
    if (is_empty(s)) {
        panic("peek from empty stack");
    }
    return s.items[(int)(s.items_len - 1LL)];
}

long long contains(Stack s, long long item) {
    long long i = 0LL;
    while (i < s.items_len) {
        if (s.items[(int)(i)] == item) {
            return 1LL;
        }
        i = i + 1LL;
    }
    return 0LL;
}

const char* stack_repr(Stack s) {
    return str_list_int(s.items, s.items_len);
}

void user_main() {
    Stack s = make_stack(5LL);
    puts(str_int(is_empty(s)));
    push(&s, 0LL);
    push(&s, 1LL);
    push(&s, 2LL);
    puts(str_int(peek(s)));
    puts(str_int(size(s)));
    puts(str_int(is_full(s)));
    push(&s, 3LL);
    push(&s, 4LL);
    puts(str_int(is_full(s)));
    puts(stack_repr(s));
    puts(str_int(pop(s)));
    puts(str_int(peek(s)));
    puts(str_int(contains(s, 1LL)));
    puts(str_int(contains(s, 9LL)));
}

int main(void) {
    {
        long long __start = _now();
        user_main();
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
